use django 2 login view, add static

--- a/src/ad_analytics/templates/ad_analytics/campaigns/list.html
+++ b/src/ad_analytics/templates/ad_analytics/campaigns/list.html
@@ -1,3 +1,6 @@
+{% extends "ad_analytics/base.html" %}
+{% load static %}
+
 {% block title %}All Campaigns {% endblock %}
 {% block main_title %}All Campaigns {% endblock %}
 
