--- a/src/ad_analytics/templates/ad_analytics/base.html
+++ b/src/ad_analytics/templates/ad_analytics/base.html
@@ -1,14 +1,18 @@
-{% load static from staticfiles %}
+{% load static %}
+
 
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Citus Ad Analytics - {% block title %}{% endblock %}</title>
-
-  <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
-  {% block extend_css %} {% endblock %}
-  {% block extend_js %} {% endblock %}
-</head>
+  <head>
+    <title>Citus Ad Analytics - {% block title %}{% endblock %}</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/admin.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+    <script src="{% static 'js/jquery.js' %}"></script>
+    <script src="{% static 'js/jquery-ui.js' %}"></script>
+    <script src="{% static 'js/admin.js' %}"></script>
+    {% block extend_css %} {% endblock %}
+    {% block extend_js %} {% endblock %}
+  </head>
 
 <body class="hold-transition skin-black sidebar-mini">
   <div class="wrapper">
