--- a/src/ad_analytics/templates/ad_analytics/campaigns/list.html
+++ b/src/ad_analytics/templates/ad_analytics/campaigns/list.html
@@ -32,7 +32,8 @@
               <td>{{ campaign.get_state_display  }}</td>
               <td> {{ campaign.impressions.count }}</td>
               <td> {{ campaign.clicks.count }}</td>
-              <!-- <td><%= @clicks_by_campaign[campaign.id] && @impressions_by_campaign[campaign.id] > 0 ? format("%0.2f%%", @clicks_by_campaign[campaign.id] / @impressions_by_campaign[campaign.id].to_f * 100) : '-' %></td> !>
+
+              <!-- <td><%= @clicks_by_campaign[campaign.id] && @impressions_by_campaign[campaign.id] > 0 ? format("%0.2f%%", @clicks_by_campaign[campaign.id] / @impressions_by_campaign[campaign.id].to_f * 100) : '-' %></td> -->
               <td>
                 <div class="progress progress-xs">
                   <div class="progress-bar progress-bar-danger" style="width: 55%"></div>
